--- a/package.json
+++ b/package.json
@@ -7,11 +7,24 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "pods": "cd ios && pod install && cd .."
   },
   "dependencies": {
+    "@react-navigation/elements": "^2.0.3",
+    "@react-navigation/native": "^7.0.2",
+    "@react-navigation/native-stack": "^7.0.3",
+    "@tanstack/react-query": "^5.60.4",
+    "axios": "^1.7.7",
+    "babel-plugin-module-resolver": "^5.0.2",
     "react": "18.3.1",
-    "react-native": "0.76.2"
+    "react-native": "0.76.2",
+    "react-native-gesture-handler": "^2.21.0",
+    "react-native-paper": "^5.12.5",
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-screens": "^4.1.0",
+    "react-native-vector-icons": "^10.2.0",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -30,6 +43,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-dotenv": "^3.4.11",
     "react-test-renderer": "18.3.1",
     "typescript": "5.0.4"
   },
