--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "pods": "cd ios && pod install && cd .."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-navigation/elements": "^2.0.3",
     "@react-navigation/native": "^7.0.2",
     "@react-navigation/native-stack": "^7.0.3",
